--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@ body {
 /* 4. 【核心】让所有页面的头部自动适应iPhone的“刘海”安全区 */
 .header, .qzone-header {
     /* 使用 env(safe-area-inset-top) 自动获取顶部安全距离 */
-    padding-top: calc(15px + env(safe-area-inset-top));
+    padding-top: 30px;
 }
 
 /* 5. 【核心】让聊天输入框和底部导航栏自动适应iPhone底部的“小黑条”安全区 */
 #chat-input-area {
-    padding-bottom: calc(8px + env(safe-area-inset-bottom));
+    padding-bottom: 30px;
 }
 
 #chat-list-bottom-nav {
-     padding-bottom: env(safe-area-inset-bottom);
+     padding-bottom: 30px;
 }
 
 /* 6. 修正模态框的 z-index，确保它在最顶层 */
@@ -1700,7 +1700,7 @@ body {
     right: 0;           /* ★ 新增 right: 0，和 left: 0 一起撑满宽度 */
     width: auto;        /* ★ 改为 auto，让 left/right 决定宽度 */
     padding: 10px 15px;
-    padding-bottom: calc(10px + env(safe-area-inset-bottom)); /* 适配iPhone底部安全区 */
+    padding-bottom: 32px; /* 适配iPhone底部安全区 */
     background-color: rgba(247, 247, 247, 0.9);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
