--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ body {
 
 /* 5. 【核心】让聊天输入框和底部导航栏自动适应iPhone底部的“小黑条”安全区 */
 #chat-input-area {
-    padding-bottom: 20px;
+    padding-bottom: calc(8px + env(safe-area-inset-bottom));
 }
 
 #chat-list-bottom-nav {
-     padding-bottom: 20px;
+     padding-bottom: env(safe-area-inset-bottom);
 }
 
 /* 6. 修正模态框的 z-index，确保它在最顶层 */
@@ -119,7 +119,7 @@ body {
     flex-grow: 1;
     background-color: #000000;
     padding-top: 80px; 
-    padding-bottom: 20px;/* 为底部导航栏留出空间 */
+    padding-bottom: 50px; /* 为底部导航栏留出空间 */
     box-sizing: border-box;
 }
 
@@ -1700,7 +1700,7 @@ body {
     right: 0;           /* ★ 新增 right: 0，和 left: 0 一起撑满宽度 */
     width: auto;        /* ★ 改为 auto，让 left/right 决定宽度 */
     padding: 10px 15px;
-    padding-bottom: 22px; /* 适配iPhone底部安全区 */
+    padding-bottom: calc(10px + env(safe-area-inset-bottom)); /* 适配iPhone底部安全区 */
     background-color: rgba(247, 247, 247, 0.9);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
