--- a/index.html
+++ b/index.html
@@ -3662,6 +3662,7 @@ input[type="checkbox"] {
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="EPhone-Dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link rel="apple-touch-icon" href="https://i.postimg.cc/FFS4Q915/1.jpg">
     
     <!-- 主题颜色 -->
