--- a/index.html
+++ b/index.html
@@ -42,45 +42,16 @@ body {
 /* 4. 【核心】让所有页面的头部自动适应iPhone的“刘海”安全区 */
 .header, .qzone-header {
     /* 使用 env(safe-area-inset-top) 自动获取顶部安全距离 */
-    position: fixed; /* 让头部固定在顶部 */
-    top: 0;
-    left: 0;
-    width: 100vw;
-    z-index: 100;
-    padding: 0 20px;
-    padding-top: calc(15px + env(safe-area-inset-top)); /* 15px为你想要的导航栏高度 */
-    height: calc(50px + env(safe-area-inset-top)); /* 50px为header本身高度，可根据实际调整 */
-    background-color: rgba(25, 25, 25, 0.9);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-bottom: 0px solid var(--border-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
+    padding-top: calc(15px + env(safe-area-inset-top));
 }
 
 /* 5. 【核心】让聊天输入框和底部导航栏自动适应iPhone底部的“小黑条”安全区 */
 #chat-input-area {
-    position: fixed;
-    left: 0;
-    width: 100vw;
-    z-index: 100;
-    padding-bottom: env(safe-area-inset-bottom);
-    bottom: 0;
-    /* 其他样式 */
+    padding-bottom: calc(8px + env(safe-area-inset-bottom));
 }
 
 #chat-list-bottom-nav {
-     position: fixed;
-    left: 0;
-    width: 100vw;
-    z-index: 100;
-    padding-bottom: env(safe-area-inset-bottom);
-    bottom: 0;
-    /* 其他样式 */
+     padding-bottom: env(safe-area-inset-bottom);
 }
 
 /* 6. 修正模态框的 z-index，确保它在最顶层 */
@@ -101,6 +72,7 @@ body {
         @keyframes charge-breath { 0%, 100% { opacity: 1; } 50% { opacity: 0.7; } }
         .screen { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: flex; flex-direction: column; overflow: hidden; opacity: 0; visibility: hidden; transition: opacity 0.3s, visibility 0.3s; }
         .screen.active { opacity: 1; visibility: visible; z-index: 1; }
+        .header { position: relative; z-index: 15; flex-shrink: 0; padding: 15px 20px; padding-top: 45px; background-color: rgba(25, 25, 25, 0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-bottom: 0px solid var(--border-color); display: flex; justify-content: space-between; align-items: center; font-size: 18px; font-weight: 600;color: white; }
         .header .header-actions { display: flex; align-items: center; gap: 15px; }
         .header .back-btn, .header .action-btn { font-size: 24px; cursor: pointer; width: 30px; text-align: center; color: white; display: flex; align-items: center; justify-content: center; }
 
@@ -138,7 +110,7 @@ body {
     flex-grow: 1;
     overflow-y: auto;
     background-color: var(--secondary-bg);
-    padding-top: calc(50px + env(safe-area-inset-top)); /* header高度一致 */
+    padding-top: 80px;
     margin-top: -80px;
 }
 
@@ -146,7 +118,7 @@ body {
 #chat-list {
     flex-grow: 1;
     background-color: #000000;
-    padding-top: calc(50px + env(safe-area-inset-top)); /* header高度一致 */ 
+    padding-top: 80px; 
     padding-bottom: 50px; /* 为底部导航栏留出空间 */
     box-sizing: border-box;
 }
@@ -173,7 +145,7 @@ body {
     overflow-y: auto;
     overflow-x: hidden; /* 核心修正1: 强制禁止水平滚动/拖动 */
     padding: 10px 15px; /* 核心修正2: 将左右内边距增加到15px，提供更多呼吸空间 */
-    padding-top: calc(50px + env(safe-area-inset-top)); /* header高度一致 */
+    padding-top: 110px;
     margin-top: -80px;
     display: flex;
     flex-direction: column;
@@ -1728,7 +1700,7 @@ body {
     right: 0;           /* ★ 新增 right: 0，和 left: 0 一起撑满宽度 */
     width: auto;        /* ★ 改为 auto，让 left/right 决定宽度 */
     padding: 10px 15px;
-    padding-bottom: env(safe-area-inset-bottom); /* 适配iPhone底部安全区 */
+    padding-bottom: calc(10px + env(safe-area-inset-bottom)); /* 适配iPhone底部安全区 */
     background-color: rgba(247, 247, 247, 0.9);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
