--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {
         @keyframes charge-breath { 0%, 100% { opacity: 1; } 50% { opacity: 0.7; } }
         .screen { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: flex; flex-direction: column; overflow: hidden; opacity: 0; visibility: hidden; transition: opacity 0.3s, visibility 0.3s; }
         .screen.active { opacity: 1; visibility: visible; z-index: 1; }
-        .header { position: relative; z-index: 15; flex-shrink: 0; padding: 15px 20px; padding-top: 45px; background-color: rgba(25, 25, 25, 0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-bottom: 0px solid var(--border-color); display: flex; justify-content: space-between; align-items: center; font-size: 18px; font-weight: 600;color: white; }
+        .header { position: fixed; z-index: 100; flex-shrink: 0; padding: 15px 20px; padding-top: calc(15px + env(safe-area-inset-top)); background-color: rgba(25, 25, 25, 0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-bottom: 0px solid var(--border-color); display: flex; justify-content: space-between; align-items: center; font-size: 18px; font-weight: 600;color: white; height: calc(50px + env(safe-area-inset-top)); }
         .header .header-actions { display: flex; align-items: center; gap: 15px; }
         .header .back-btn, .header .action-btn { font-size: 24px; cursor: pointer; width: 30px; text-align: center; color: white; display: flex; align-items: center; justify-content: center; }
 
@@ -145,7 +145,7 @@ body {
     overflow-y: auto;
     overflow-x: hidden; /* 核心修正1: 强制禁止水平滚动/拖动 */
     padding: 10px 15px; /* 核心修正2: 将左右内边距增加到15px，提供更多呼吸空间 */
-    padding-top: 110px;
+    padding-top: calc(50px + env(safe-area-inset-top)); /* 50px为header高度 */
     margin-top: -80px;
     display: flex;
     flex-direction: column;
